# Owo-Farm-Bot-By-Ninja.69

./: LICENSE  README.md  keep_alive.py  main.py  pyproject.toml  pyproject.toml.working  readme.txt  webserver.py
data/: legendary  pokemon
