[tool.poetry]
name = "repl_python3_Poketwo-Autocatcher"
version = "0.1.0"
description = ""
authors = ["Ninja.69 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
"discord.py-self" = "^1.9.1"
keep-alive = "^0.0.1"
Flask = "^2.0.3"
discord-ext-slash = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
